fix(readme): update github tag badge link and related plugins

--- a/package.json
+++ b/package.json
@@ -78,7 +78,10 @@
         "dush-methods",
         "minibase-create-plugin",
         "minibase",
-        "minibase-is-registered"
+        "minibase-is-registered",
+        "dush-options",
+        "dush-better-use",
+        "dush-promise"
       ]
     },
     "reflinks": [
